# slopp-heuristic

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  README.md  gcc.code-profile  solve_all  solve_parallel
.github/workflows/: test.yml
benchmark/: CMakeLists.txt  bm_BoolCuboid.cpp  bm_compare_algorithms.cpp  bm_fibonacci.cpp
benchmark/data/compare_algorithms/: case_1.json
include/: AllocatedSmallItem.hpp  BoolCuboid.hpp  BoolMatrix.hpp  CornerPointIdentifier.hpp  Input.hpp  LargeObject.hpp  LargestFitFirstAlgorithm.hpp  OrderedSmallItems.hpp  PriorityQueueOfVector3D.hpp  Size.hpp  SmallItem.hpp  SmallItemQuantityManager.hpp  Surface.hpp  Test.hpp  Vector3D.hpp  fibonacci.hpp
include/Algorithm/: LargestFitFirst.hpp  LargestFitFirstV2.hpp  LargestFitFirstV3.hpp
include/Algorithm/LargestFitFirst/: BoolCuboid.hpp  CornerPointIdentifier.hpp  PriorityQueueOfVector3D.hpp
include/AllocatedSmallItem/: AllocatedSmallItem.hpp  BasicAllocatedSmallItem.hpp
include/AllocatedSmallItem/Specialization/: AllocatedSmallItemWithSurface.hpp  BasicAllocatedSmallItem.hpp
include/EmptySpace/MaximalEmptySpace/: EmptySpace.hpp  EmptySpaceOperator.hpp
include/EmptySpace/MaximalEmptySpace/Specialization/: BasicEmptySpace.hpp
include/Geometry/: Surface.hpp  Vector3D.hpp
include/Input/: Input.hpp  InputFactory.hpp  Input_V_0_3_0.hpp
include/Input/Specialization/: BasicInput.hpp
include/LargeObject/: BasicLargeObject.hpp  LargeObjectType.hpp
include/SmallItem/: BasicSmallItem.hpp  SmallItemType.hpp
include/SmallItem/Container/: OrderedSmallItemsByVolume.hpp  QuantityManager.hpp
include/SmallItem/Specialization/: BasicSmallItem.hpp  SmallItemWithSurface.hpp
include/Test/: Test.hpp
include/Timer/: Timer.hpp  UserTimer.hpp  WallTimer.hpp
include/Type/: Quantity.hpp
include/algorithm/: LargestFitFirst.hpp  LargestFitFirstAlgorithm.hpp  LargestFitFirstV2.hpp
include/input/: Input.hpp  InputFactory.hpp  Input_V_0_3_0.hpp
script/: benchmark  build  check_code_coverage  check_code_quality  enforce_code_style  install_submodule_dependencies  test
source/: AllocatedSmallItem.cpp  BoolCuboid.cpp  BoolMatrix.cpp  CornerPointIdentifier.cpp  Input.cpp  LargeObject.cpp  LargestFitFirstAlgorithm.cpp  OrderedSmallItems.cpp  PriorityQueueOfVector3D.cpp  Size.cpp  SmallItem.cpp  SmallItemQuantityManager.cpp  Test.cpp  Vector3D.cpp  solve.cpp
source/Algorithm/: LargestFitFirst.cpp  LargestFitFirstV2.cpp  LargestFitFirstV3.cpp
source/Algorithm/LargestFitFirst/: BoolCuboid.cpp  CornerPointIdentifier.cpp  OrderedSmallItems.cpp  PriorityQueueOfVector3D.cpp  SmallItemQuantityManager.cpp
source/AllocatedSmallItem/Specialization/: AllocatedSmallItemWithSurface.cpp
source/EmptySpace/MaximalEmptySpace/: EmptySpace.cpp
source/EmptySpace/MaximalEmptySpace/Specialization/: BasicEmptySpace.cpp
source/Geometry/: Vector3D.cpp
source/Input/: Input.cpp  InputFactory.cpp  Input_V_0_3_0.cpp
source/Input/Specialization/: BasicInput.cpp
source/LargeObject/: BasicLargeObject.cpp  LargeObjectType.cpp
source/LargeObject/Specialization/: BasicLargeObject.cpp
source/SmallItem/: BasicSmallItem.cpp  SmallItemType.cpp
source/SmallItem/Specialization/: BasicSmallItem.cpp  SmallItemWithSurface.cpp
source/Test/: Test.cpp
source/algorithm/: LargestFitFirst.cpp  LargestFitFirstAlgorithm.cpp  LargestFitFirstV2.cpp
source/fibonacci/: fibonacci.cpp
source/input/: Input.cpp  InputFactory.cpp  Input_V_0_3_0.cpp
test/: AllocatedSmallItem.test.cpp  BoolCuboid.test.cpp  BoolMatrix.test.cpp  CMakeLists.txt  CornerPointIdentifier.test.cpp  Input.test.cpp  LargeObject.test.cpp  LargestFitFirstAlgorithm.test.cpp  OrderedSmallItems.test.cpp  PriorityQueueOfVector3D.test.cpp  Size.test.cpp  SmallItem.test.cpp  SmallItemQuantityManager.test.cpp  Timer.cpp  Vector3D.test.cpp  fibonacci.test.cpp  json.test.cpp
test/Algorithm/: LargestFitFirst.test.cpp  LargestFitFirstV2.test.cpp  LargestFitFirstV3.test.cpp
test/Algorithm/LargestFitFirst/: BoolCuboid.test.cpp  CornerPointIdentifier.test.cpp  OrderedSmallItems.test.cpp  PriorityQueueOfVector3D.test.cpp  SmallItemQuantityManager.test.cpp
test/AllocatedSmallItem/: BasicAllocatedSmallItem.test.cpp
test/AllocatedSmallItem/Specialization/: AllocatedSmallItemWithSurface.test.cpp
test/Dependency/: brkga.test.cpp  json.test.cpp
test/EmptySpace/MaximalEmptySpace/: EmptySpaceOperator.test.cpp  M_EmptySpace.test.cpp
test/EmptySpace/MaximalEmptySpace/Specialization/: BasicEmptySpace.test.cpp
test/Geometry/: Vector3D.test.cpp
test/Input/Specialization/: BasicInput.test.cpp
test/LargeObject/: BasicLargeObject.test.cpp
test/SmallItem/: BasicSmallItem.test.cpp
test/SmallItem/Container/: OrderedSmallItemsByVolume.test.cpp  QuantityManager.test.cpp
test/SmallItem/Specialization/: SmallItemWithSurface.test.cpp
test/Timer/: Timer.cpp
test/algorithm/: LargestFitFirst.test.cpp  LargestFitFirstAlgorithm.test.cpp  LargestFitFirstV2.test.cpp
test/data/EmptySpace/MaximalEmptySpace/: 1.json  10.json  5.json
test/data/EmptySpace/MaximalEmptySpace/EmptySpaceOperator/add_to_collection/: 1.json  2.json  3.json  4.json  5.json  6.json
test/data/EmptySpace/MaximalEmptySpace/EmptySpaceOperator/cut_collection/: 1.json  2.json  3.json  4.json  collection_of_empty_spaces.json
test/data/EmptySpace/MaximalEmptySpace/EmptySpaceOperator/cut_empty_space/: 10.json  2.json  3.json
test/data/Input/: 01.json
test/data/LargestFitFirst/: 01.json  02.json  03.json  04.json
test/data/LargestFitFirstAlgorithm/: 01.json  02.json  03.json  04.json
test/data/LargestFitFirstV2/: 02.json  03.json  04.json
test/data/LargestFitFirstV3/: 02.json  03.json
test/data/json/: 01.json
test/tools/: compute_surface_of_small_item.py
